Fixed sidebar height on smaller width in web

--- a/src/assets/scss/custom/structure/_vertical.scss
+++ b/src/assets/scss/custom/structure/_vertical.scss
@@ -202,7 +202,7 @@
 
     body.sidebar-enable {
         .vertical-menu {
-            height: 100vh;
+            height: 100%;
             display: block;
             margin-left: 0;
         }
